	* arch/arm/src/lpc17xx/lpc17_gpio.c:  Fix a integer flow problem in shift.
	  This error would prevent pins > 15 from being used as interrupt sources.
	* arch/arm/src/stm32/stm32_can.c:  The CAN driver has been verified in
	  loopback mode on the STM3240G-EVAL board.
	* configs/stm3240g-eval/src/up_adc.c: Complete coding of ADC support for the
	  potentiometer on board the STM3240G-EVAL.
	* arch/arm/src/lpc17_can.c:  Several CAN driver improvements. Adds support for
	  testing in loopback mode.  now uses all three transmit buffers for better
	  performance.
	* confgs/olimex-lpc1766stk/nsh:  Now supports the CAN loopback test as an
	  optional "built-in" application.
	* sched/irq_attach.c:  Fix an issue with disabling interrupts when they are
	  detached.  For the PIC32, this can't be done because there is a 1-to-many
	  relationship between vector numbers and interrupt numbers or different.
	  Added a new configuration option CONFIG_ARCH_VECNOTIRQ to at least flag
	  the architectures that have this issue and to (at least) avoid doing
	  something too wrong.
	* drivers/can.c:  Fix a test for buffer full in the generic, "upper half",
	  can driver.
	* arch/arm/src/lm3s: Add support for the LM3S6432S2E (Contributed by Mike Smith)
	* configs/lm3s6432-s2:  Add support for the TI RDK-S2E (LM3S6432S2E) board
	  (Contributed by Mike Smith)
	* configs/stm3240g-eval/src: Add APIs support to support user access to the
	  LEDs
	* arch/arm/src/lpc17xx/lpc17_can.c: Add logic to change the CAN bit rate based
	  on the NuttX configuration.
	* arch/arm/src/lpc17xx/lpc17_can.c: PCLK divisor is now a configuration
	  option.
	* arch/arm/src/stm32/stm32_serial.c and stm32_lowputc.c:  Support for
	  UART4-5 and USART6 added by Mike Smith.  Also includes a more flexible
	  way of managing UART pin configurations.
	* include/nuttx/pwm.h, drivers/pwm.c, arch/arm/src/stm32/stm32_pwm.c:  Add
	  support for pulse count in order to better support stepper motors.
